[gd_scene load_steps=10 format=3 uid="uid://toe57swm5e7u"]

[ext_resource type="PackedScene" uid="uid://by4yy8w0nckuy" path="res://escenas/entity/modifier/env_modifier/env_modifier.tscn" id="1_u8d66"]
[ext_resource type="Script" path="res://scripts/entity/modifier/env_modifier/tapón.gd" id="2_3mx7y"]
[ext_resource type="Shader" path="res://shaders/outer_outline.gdshader" id="3_d5at0"]
[ext_resource type="Texture2D" uid="uid://day265gfb84wi" path="res://img/env_modifiers/Tapón.svg" id="4_6k6d2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ijy5v"]
shader = ExtResource("3_d5at0")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[sub_resource type="Animation" id="Animation_njicp"]
resource_name = "Sacar"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ecsy"]
_data = {
"Sacar": SubResource("Animation_njicp")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2y45r"]
radius = 19.9925
height = 63.9985

[sub_resource type="CircleShape2D" id="CircleShape2D_h4s8r"]
radius = 73.0

[node name="Tapón" instance=ExtResource("1_u8d66")]
gravity_scale = -128.0
freeze = true
script = ExtResource("2_3mx7y")

[node name="Sprite2D" parent="." index="0"]
material = SubResource("ShaderMaterial_ijy5v")
position = Vector2(0, -9.53674e-07)
scale = Vector2(0.131529, 0.131529)
texture = ExtResource("4_6k6d2")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D" index="0"]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_7ecsy")
}

[node name="CollisionShape2D" parent="." index="1"]
visible = true
position = Vector2(-13, 25)
rotation = 1.54344
shape = SubResource("CapsuleShape2D_2y45r")
disabled = true

[node name="InteractArea" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea" index="0"]
visible = false
position = Vector2(-11, 24)
shape = SubResource("CircleShape2D_h4s8r")

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
